--- a/Bulls and Cows/Game log/task-info.yaml
+++ b/Bulls and Cows/Game log/task-info.yaml
@@ -90,5 +90,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/5429#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 28 Apr 2022 05:46:54 UTC
 record: -1
