--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -7,7 +7,7 @@ update_date: Thu, 28 Apr 2022 05:31:02 UTC
 stages:
 - id: 287
   step: 5429
-  is_completed: false
+  is_completed: true
 - id: 288
   step: 5430
   is_completed: false
