--- a/Bulls and Cows/Grader/task-info.yaml
+++ b/Bulls and Cows/Grader/task-info.yaml
@@ -178,5 +178,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/5430#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Wed, 22 Jun 2022 15:25:51 UTC
+record: 2
