--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/209958/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Wed, 22 Jun 2022 08:27:18 UTC
+update_date: Sat, 16 Jul 2022 10:52:14 UTC
 stages:
 - id: 287
   step: 5429
   is_completed: true
 - id: 288
   step: 5430
-  is_completed: false
+  is_completed: true
 - id: 289
   step: 5431
   is_completed: false
