--- a/Bulls and Cows/Secret code/task-info.yaml
+++ b/Bulls and Cows/Secret code/task-info.yaml
@@ -115,5 +115,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/5431#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sat, 16 Jul 2022 18:14:03 UTC
 record: -1
