I created a method which return a long number from ArrayList<String>

--- a/Bulls and Cows/Game time/task-info.yaml
+++ b/Bulls and Cows/Game time/task-info.yaml
@@ -244,6 +244,9 @@ files:
         }
     }
   learner_created: false
+- name: test/bullscows/MainTest.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5432#comment
 status: Failed
 feedback:
