--- a/Bulls and Cows/Game time/task-info.yaml
+++ b/Bulls and Cows/Game time/task-info.yaml
@@ -248,19 +248,8 @@ files:
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5432#comment
-status: Failed
+status: Solved
 feedback:
-  message: |-
-    Error in test #2
-
-    In this test, the program is running for a long time, more than 15 seconds. Most likely, the program has gone into an infinite loop.
-
-    Please find below the output of your program during this failed test.
-    Note that the &#39;&gt;&#39; character indicates the beginning of the input line.
-
-    ---
-
-    Please, enter the secret code&#39;s length:
-    &gt; 4
-  time: Tue, 19 Jul 2022 23:50:53 UTC
+  message: Congratulations!
+  time: Sun, 24 Jul 2022 11:58:12 UTC
 record: -1
